--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,19 +10,13 @@
 
     <script src="/lib/ngtoast/dist/ngToast.min.js"></script>
 
-    <script src="/lib/apKeySMAC/apKeySmac.js"></script>
-    <script src="/lib/apKeySMAC/keySmacService.js"></script>
-    <script src="/lib/apKeySMAC/keySmacLegendService.js"></script>
-
-    <script src="/lib/apSock/sockService.js"></script>
-    <script src="/lib/apLamb/LambLib.js"></script>
-    <script src="/lib/apLamb/lambService.js"></script>
-    <script src="/lib/apLamb/LambSocksLib.js"></script>
-    <script src="/lib/apLamb/lambSocksService.js"></script>
+    <script src="/lib/apLamb/dist/apLamb.js"></script>
+    <script src="/lib/apLambSocks/sockService.js"></script>
+    <script src="/lib/apLambSocks/lambSocksLib.js"></script>
+    <script src="/lib/apLambSocks/lambSocksService.js"></script>
 
     <script src="/scripts/app/LambSample.js"></script>
     <script src="/scripts/app/LambSampleRoute.js"></script>
-    <script src="/scripts/app/LambSampleShortcuts.js"></script>
     <script src="/scripts/app/httpInterceptor.js"></script>
     <script src="/scripts/app/navCtrl.js"></script>
 
@@ -46,7 +40,6 @@
     <link rel='stylesheet' href='/stylesheets/style.css'/>
 
     <link rel="stylesheet" href="/lib/bootstrap-css/css/bootstrap.min.css">
-    <!--<script src="/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
     <link rel="stylesheet" href="/lib/ngToast/dist/ngToast.min.css">
 
 </head>
