--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,9 @@
 
     <script src="/lib/ngtoast/dist/ngToast.min.js"></script>
 
-    <script src="/lib/apLamb/dist/apLamb.js"></script>
-    <script src="/lib/apLambSocks/sockService.js"></script>
+    <script src="/lib/apLamb/LambLib.js"></script>
+    <script src="/lib/apLamb/lambService.js"></script>
+    <script src="/lib/apSock/sockService.js"></script>
     <script src="/lib/apLambSocks/lambSocksLib.js"></script>
     <script src="/lib/apLambSocks/lambSocksService.js"></script>
 
